prosynth/souffle/tests/semantic/comp_nonexistent_type/comp_nonexistent_type.err
Error: Referencing undefined component TThatDoesNotExist in file comp_nonexistent_type.dl at line 21
    .init cg = TThatDoesNotExist
----^----------------------------
1 errors generated, evaluation aborted
